<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <EditText
        android:id="@+id/noteText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/note_text"
        android:inputType="textMultiLine"
        android:minHeight="@dimen/edit_text_height"
        app:layout_constraintEnd_toEndOf="@+id/textNoteTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textNoteTitle"
        app:layout_constraintTop_toBottomOf="@+id/textNoteTitle"
        android:importantForAutofill="no" />

    <Spinner
        android:id="@+id/spinnerCourses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/select_a_course"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textNoteTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/note_title"
        android:minHeight="@dimen/edit_text_height"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/spinnerCourses"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinnerCourses"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCourses"
        android:importantForAutofill="no"/>

    <TextView
        android:id="@+id/commentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comments"
        android:textColor="#666666"
        android:textSize="12sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/colorSelector"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/commentsList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/commentLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/colorSelectedLabel"
        android:text="@string/note_color"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/noteText"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.example.notekeeperapp.ColorDialView
        android:id="@+id/colorSelector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:progress="@integer/material_motion_duration_short_1"
        android:foregroundTint="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/colorSelectedLabel"
        android:layout_marginTop="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:colors="@array/note_color_array"
        />

</androidx.constraintlayout.widget.ConstraintLayout>